# SMA-trader

./: .gitignore  CMakeLists.txt  README.md
client/: CMakeLists.txt  client  client.cpp  file_to_send  file_to_send0  file_to_send1  file_to_send10  file_to_send100  file_to_send1000  file_to_send1001  file_to_send1002  file_to_send1003  file_to_send1004  file_to_send1005  file_to_send1006  file_to_send1007  file_to_send1008  file_to_send1009  file_to_send101  file_to_send1010  file_to_send1011  file_to_send1012  file_to_send1013  file_to_send1014  file_to_send1015  file_to_send1016  file_to_send1017  file_to_send1018  file_to_send1019  file_to_send102  file_to_send1020  file_to_send1021  file_to_send1022  file_to_send1023  file_to_send1024  file_to_send1025  file_to_send1026  file_to_send1027  file_to_send1028  file_to_send1029  (+9964 more)
file_processing/: file_proccessing.cpp  file_proccessing.h  main.cpp
file_processing/json_utils/: JSON.h  json_exmaple.json
price_files/: file_to_send
server/: CMakeLists.txt  server  server.cpp
server/files/: 1  10  1000  10001  10002  10003  10004  10005  10006  10007  10008  10009  10010  10011  10012  10013  10014  10015  10016  10017  10018  10019  10020  10021  10022  10023  10024  10025  10026  10027  10028  10029  10030  10031  10032  10033  10034  10035  10036  10037  (+17445 more)
tools/SMA/: price_buffer.cpp  price_buffer.h
tools/ThreadPool/: ThreadPool.h
tools/logger/: logger.h
tools/price_generator/: price_generator.cpp  price_generator.h
tools/spinlock/: spinlock.h  spinlockGuard.h
